--- a/app/views/pages/layouts/forindex.liquid
+++ b/app/views/pages/layouts/forindex.liquid
@@ -32,7 +32,7 @@ is_layout: true
 
 <!-- ------------------------------------------------------------------ -->
 
-<section class="featured-news section-bottom-margin">
+<section class="older-news section-bottom-margin">
   <div class="container main-content">
 
     {% block older_news, short_name: true %}
@@ -43,6 +43,16 @@ is_layout: true
 </section>
 
 <!-- ------------------------------------------------------------------ -->
+
+<section class="test-section section-bottom-margin">
+  <div class="container main-content">
+
+    {% block test, short_name: true %}
+
+    {% endblock %}
+
+  </div>
+</section>
 
 
 {% endblock %}
