--- a/app/views/pages/index.liquid
+++ b/app/views/pages/index.liquid
@@ -28,7 +28,6 @@ editable_elements:
       "
   'content/test/featured_photo/legend': "Hermitage Museum, Saint Petersburg"
 # FIXME:
-# Remove all the captures, no longer needed
 # Update the editable_elements keys in the liquid part to display user friendly text
 # Update the editablle_elements keys in the header parts of the other languages files
 ---
@@ -99,7 +98,7 @@ editable_elements:
     <!-- --------------------------------------------- -->
 
   {% capture featured_news_section_title %}
-    {% editable_text "featured news section title" %}
+    {% editable_text "featured_news_section_title", format: "raw", rows: 1 %}
       Currently
     {% endeditable_text %}
   {% endcapture %}
@@ -141,7 +140,7 @@ editable_elements:
     <!-- --------------------------------------------- -->
 
   {% capture older_news_section_title %}
-    {% editable_text "older news section title" %}
+    {% editable_text "older_news_section_title", format: "raw", rows: 1 %}
       But still and also
     {% endeditable_text %}
   {% endcapture %}
@@ -210,7 +209,7 @@ editable_elements:
       {% block 'featured_photo' %}
         {% comment %} Captured and editable legend for the featured photo {% endcomment %}
         {% capture legend %}
-          {% editable_text "legend", format: "raw", rows: 3, hint: "Text displayed below the photo and in the ALT attribute." %}
+          {% editable_text "legend", format: "raw", rows: 1, hint: "Text displayed below the photo and in the ALT attribute." %}
           {% endeditable_text %}
         {% endcapture %}
         {% comment %} Captured and editable file for the featured photo {% endcomment %}
