numerous modification; solved scoping issues; dealt with images issues (issue still unresolved); dealt with editable elements issues (still unresolved, pending @did's fixes)

--- a/app/views/pages/contact.liquid
+++ b/app/views/pages/contact.liquid
@@ -37,7 +37,7 @@ position: 3
         <textarea name="content[message]" class="form-control" id="message" placeholder="{{ 'user_message' | translate }}" rows="3">{{user_message.message}}</textarea>
       </div>
       <div class="form-group">
-        <button type="submit" class="btn btn-default">{{ 'Submit_btn_txt' | translate }}</button>
+        <button type="submit" class="btn btn-default">{{ 'submit_btn_txt' | translate }}</button>
       </div>
 
     {% endmodel_form %}
