--- a/app/views/pages/index.fr.liquid
+++ b/app/views/pages/index.fr.liquid
@@ -3,27 +3,34 @@ title: Accueil
 published: true
 listed: true
 handle: home
+meta_description: "Page d\'accueil du site internet d\'Art des Nations"
+seo_title: "Page d\'accueil du site internet d\'Art des Nations"
 position: 0
-meta_description: "Page d\'accueil du site internet du Centre pour l\'amitié franco-russe et franco-chinoise"
-seo_title: "Page d\'accueil du site internet du Centre pour l\'amitié franco-russe et franco-chinoise"
 editable_elements:
-  'content/header/jumbotron_title': "Mettre en oeuvre la paix par l\'amitié"
-  'content/header/jumbotron_sub_title': "Découvrez nos actions pour l\'amitié transcontinentale."
-  'content/header/btn_text': "Lisez nos actualités"
-  'content/header/first_column':
+  'content/header/header_photo_legend': "Grande Muraille de Chine"
+  'content/header/header_photo': "chinese_great_wall.jpg"
+  'content/header/main_title': "5ème édition du Festival Standard Idéal"
+  'content/header/subtitle': "Du 5 au 25 mai 2016"
+  'content/header/call_to_action_button': "Découvrez le programme"
+
+  'content/featured_news/featured_news_section_title': "Actuellement"
+  'content/older_news/older_news_section_title': "Mais encore"
+
+  'content/test/first_column':
       "
       <h2>Chine</h2>
       <p>Un peuple composé de multi-millions de personnes, avec une histoire multi-millénaire et une culture culinaire riche et diverse, la Chine est devenue au cours des dernières années l'un des principaux acteurs de l'économie mondiale. Et son armée est en train de rattraper le retard pour dominer l'Empire de l'Est.</p>
       "
-  'content/header/second_column':
+  'content/test/second_column':
       "
       <h2>France</h2>
       <p>Un petit pays qui fut une fois grand et qui conserve un large périmètre d'influence sur les affaires africaines et européennes. Le peuple français aime le vin et le saucisson ainsi que sa légendaire culture des cafés.</p>
       "
-  'content/header/third_column':
+  'content/test/third_column':
       "
       <h2>Russie</h2>
       <p>Fermement ancrée dans les terres froides, la Russie est fameuse pour ses révolutionnaires, sa vodka, ses femmes, ses joueurs d'échecs et ses armes qui sont disponibles facilement partout dans le monde à des prix intéressants.</p>
       "
-  'content/main/featured_photo/legend': "Musée de l'Hermitage, Saint-Petersbourg"
+  'content/test/featured_photo/legend': "Musée de l'Hermitage, Saint-Petersbourg"
+  'content/test/featured_photo/featured_photo': "saint_petersburgh_ermitage.jpg"
 ---
