--- a/app/views/pages/index.zh-CN.liquid
+++ b/app/views/pages/index.zh-CN.liquid
@@ -4,12 +4,18 @@ published: true
 listed: true
 handle: home
 position: 0
-meta_description: "该中心的网站主页，法俄友谊和法国 - 中国"
-seo_title: "该中心的网站主页，法俄友谊和法国 - 中国"
+meta_description: "该国的艺术网站首页"
+seo_title: "该国的艺术网站首页"
 editable_elements:
-  'content/header/jumbotron_title': "实现通过友好和平"
-  'content/header/jumbotron_sub_title': "了解我们的横贯大陆的友谊行动。"
-  'content/header/btn_text': "请阅读我们的新闻"
+  'content/header/header_photo_legend': "伟大的中国长城"
+  'content/header/header_photo': "chinese_great_wall.jpg"
+  'content/header/main_title': "理想标准节的第5版"
+  'content/header/subtitle': "五月五日至2016年5月25日"
+  'content/header/call_to_action_button': "探索计划"
+
+  'content/featured_news/featured_news_section_title': "目前，"
+  'content/older_news/older_news_section_title': "但是，仍然还"
+
   'content/header/first_column':
       "
       <h2>中国</h2>
@@ -25,5 +31,6 @@ editable_elements:
       <h2>俄国</h2>
       <p>深深植根于寒冷的土地上，俄罗斯是著名的革命，它的伏特加，其妇女，其国际象棋选手和武器装备是在负担得起的价格任何世界的一部分容易获得。</p>
       "
-  'content/main/featured_photo/legend': "冬宫博物馆，圣彼得堡"
+  'content/test/featured_photo/legend': "冬宫博物馆，圣彼得堡"
+  'content/test/featured_photo/featured_photo': "saint_petersburgh_ermitage.jpg"
 ---
