--- a/app/views/pages/index.ru.liquid
+++ b/app/views/pages/index.ru.liquid
@@ -3,27 +3,34 @@ title: "добро пожаловать"
 published: true
 listed: true
 handle: home
+meta_description: "Главная страница сайта Искусство Наций"
+seo_title: "Главная страница сайта Искусство Наций"
 position: 0
-meta_description: "Сайт домашнюю Центра для дружбы Франко - русской и Франко - китайский"
-seo_title: "Сайт домашнюю Центра для дружбы Франко - русской и Франко - китайский"
 editable_elements:
-  'content/header/jumbotron_title': "Реализация мир через дружбу"
-  'content/header/jumbotron_sub_title': "Откройте для себя наши действия по трансконтинентальной дружбы."
-  'content/header/btn_text': "Читайте наши новости"
-  'content/header/first_column':
+  'content/header/header_photo_legend': "Великая Китайская стена"
+  'content/header/header_photo': "chinese_great_wall.jpg"
+  'content/header/main_title': "5-е издание Стандартной Идеально фестиваля"
+  'content/header/subtitle': "С 5 мая по 25 мая 2016 года"
+  'content/header/call_to_action_button': "Откройте программу"
+
+  'content/featured_news/featured_news_section_title': "В данный момент"
+  'content/older_news/older_news_section_title': "Но все-таки, а также"
+
+  'content/test/first_column':
       "
       <h2>Китай</h2>
       <p>Многомиллиардный люди с многотысячелетней лет истории и разнообразной и богатой культуры кулинарного, Китай стал в последние годы одним из основных игроков в мировой экономике. И его военные догоняют преодолеть Восточную империю.</p>
       "
-  'content/header/second_column':
+  'content/test/second_column':
       "
       <h2>Франция</h2>
       <p>Небольшой некогда большая страна , которая держит большой объем влияния на африканских и европейских делах, французские люди любят вино и saussages а также легендарный кафе культуры.</p>
       "
-  'content/header/third_column':
+  'content/test/third_column':
       "
       <h2>Россия</h2>
       <p>Глубоко укоренившееся в холодных землях, Россия славится своими революционеров, ее водкой, его женщин, его шахматистов и его вооружения, которые легко доступны в любой части мира по доступным ценам.</p>
       "
-  'content/main/featured_photo/legend': "Эрмитаж, Санкт-Петербург"
+  'content/test/featured_photo/legend': "Эрмитаж, Санкт-Петербург"
+  'content/test/featured_photo/featured_photo': "saint_petersburgh_ermitage.jpg"
 ---
