--- a/app/views/snippets/header_side_nav_stuffs.liquid
+++ b/app/views/snippets/header_side_nav_stuffs.liquid
@@ -1,5 +1,5 @@
 {% comment %} Variables definitions {% endcomment %}
-{% assign icon_logo_url = 'samples/placeholders/1280x960.png' %}
+{% assign icon_logo_url = 'logo.png' | theme_image_url %}
 {% assign logo_alt = 'Exemple Logo' %}
 {% assign large_resize = '131x66' %}
 {% assign small_resize = '105x53' %}
